--- a/Styles/style_sitewide.css
+++ b/Styles/style_sitewide.css
@@ -1,7 +1,23 @@
+@font-face {
+	font-family: "SUSE";
+	src: url("/WebAsset/SUSE-VariableFont_wght.ttf");
+}
+
 #TopBar {
 	background-image: url('/WebAsset/download_4_optimized.webp');
 	background-size: cover;
 	background-position:top;
 	background-attachment:local;
+
+	min-height: 50px;
+
 }
 
+.logo_text {
+	padding: 5px 15px;
+	font-family: "SUSE", sans-serif;
+	font-weight: 700;
+	font-size: 2rem;
+
+	color: white;
+}
