--- a/Styles/style_sitewide.css
+++ b/Styles/style_sitewide.css
@@ -21,3 +21,16 @@
 
 	color: white;
 }
+
+@media screen and (max-width: 768px) {
+	.logo_text {
+		font-size: 1.5rem;
+	}
+}
+
+@media screen and (max-width: 576px) {
+	.logo_text {
+		font-size: 1.2rem;
+	}
+	
+}
