--- a/Styles/style_header.css
+++ b/Styles/style_header.css
@@ -71,9 +71,19 @@ a.highlight {
 }
 
 .heading-content {
-	display: flex;
-	align-items: center;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-column-gap: 0px;
+	grid-row-gap: 0px;
 	justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+	.heading-content {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
 
 .heading-side {
