--- a/Styles/style_header.css
+++ b/Styles/style_header.css
@@ -52,20 +52,29 @@ a.highlight {
 	color: #ffffff;
 	margin-bottom: 1rem;
 	padding: 100px;
+}
 
-	@media (max-width: 960px) {
+
+@media (max-width: 960px) {
+	.heading {
 		padding: 75px 50px;
 	}
+}
 
-	@media (max-width: 768px) {
+@media (max-width: 768px) {
+	.heading {
 		padding: 50px 20px;
 	}
+}
 
-	@media (max-width: 576px) {
+@media (max-width: 576px) {
+	.heading {
 		padding: 30px 15px;
 	}
+}
 
-	@media (max-width: 480px) {
+@media (max-width: 480px) {
+	.heading {
 		padding: 20px 10px;
 	}
 }
@@ -76,8 +85,8 @@ a.highlight {
 	grid-column-gap: 0px;
 	grid-row-gap: 0px;
 	justify-content: space-between;
-    justify-items: center;
-    align-items: center;
+	justify-items: center;
+	align-items: center;
 }
 
 @media screen and (max-width: 768px) {
@@ -89,16 +98,23 @@ a.highlight {
 .heading-side {
 	flex: 1;
 	padding: 0 1rem;
+}
 
-	@media (max-width: 768px) {
+
+@media (max-width: 768px) {
+	.heading-side {
 		padding: 0 0.5rem;
 	}
+}
 
-	@media (max-width: 576px) {
+@media (max-width: 576px) {
+	.heading-side {
 		padding: 0 0.25rem;
 	}
+}
 
-	@media (max-width: 480px) {
+@media (max-width: 480px) {
+	.heading-side {
 		padding: 0 0.125rem;
 	}
 }
