--- a/Styles/style_team.css
+++ b/Styles/style_team.css
@@ -1,3 +1,38 @@
+.team-logo {
+  width: 600px;
+}
+
+
+@media (max-width: 1150px) {
+  .team-logo {
+    width: 450px;
+  }
+}
+
+@media (max-width: 960px) {
+  .team-logo {
+    width: 370px;
+  }
+}
+
+@media (max-width: 820px) {
+  .team-logo {
+    width: 320px;
+  }
+}
+
+@media (max-width: 650px) {
+  .team-logo {
+    width: 280px;
+  }
+}
+
+@media (max-width: 480px) {
+  .team-logo {
+    width: 200px;
+  }
+}
+
 
 .team {
   display: grid;
@@ -5,6 +40,7 @@
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
+
 .member-card {
   display: flex;
   justify-content: center;
@@ -14,6 +50,7 @@
   gap: 0.75rem;
   transition: display 0.5s ease-in-out;
 }
+
 .member-image {
   width: 100px;
   height: 100px;
@@ -21,33 +58,36 @@
   border-radius: 50%;
   border: 2px solid aquamarine;
 }
+
 .member-card-bottom {
   margin-top: 2rem;
   width: 100%;
   height: 100%;
 }
+
 .member-name {
   font-size: 1.25rem;
   font-weight: 700;
 }
+
 .member-email {
   font-size: 1rem;
   font-weight: 500;
 }
+
 .member-role {
   font-size: 0.9rem;
   font-weight: 400;
 }
-@media screen and (min-width: 768px) and (max-width:976px) {
+
+@media screen and (max-width:1200px) {
   .team {
-  /* grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); */
-  grid-template-columns: repeat(2, 1fr)
-	  
+    grid-template-columns: repeat(2, 1fr)
   }
 }
-@media screen and (max-width:768px) {
+
+@media screen and (max-width:868px) {
   .team {
-  grid-template-columns: repeat(1, 1fr)
-	  
+    grid-template-columns: repeat(1, 1fr)
   }
 }
