--- a/Styles/style_team.css
+++ b/Styles/style_team.css
@@ -46,7 +46,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: row;
-  padding: 2rem;
+  padding: 2rem .5rem;
   gap: 0.75rem;
   transition: display 0.5s ease-in-out;
 }
@@ -88,6 +88,8 @@
 
 @media screen and (max-width:868px) {
   .team {
-    grid-template-columns: repeat(1, 1fr)
+    grid-template-columns: repeat(1, 1fr);
+    margin: 0 auto;
   }
+
 }
