--- a/Styles/style_about.css
+++ b/Styles/style_about.css
@@ -2,8 +2,8 @@
   width: 500px;
   /* set max height and crop the rest */
   max-height: 300px;
-  object-fit: cover;
-  object-position: top;
+  /* object-fit: cover;
+  object-position: top; */
 }
 
 @media (max-width: 1150px) {
@@ -16,6 +16,7 @@
   .space-logo {
     width: 370px;
   }
+  
 }
 
 @media (max-width: 820px) {
@@ -26,13 +27,13 @@
 
 @media (max-width: 650px) {
   .space-logo {
-    width: 280px;
+    width: 90vw;
   }
 }
 
 @media (max-width: 480px) {
   .space-logo {
-    width: 200px;
+    width: 95vw;
   }
 }
 
