--- a/Styles/style_sitewide.css
+++ b/Styles/style_sitewide.css
@@ -2,6 +2,12 @@
 	font-family: "SUSE";
 	src: url("/WebAsset/SUSE-VariableFont_wght.ttf");
 }
+.page {
+	background-image: url('/WebAsset/download_4_optimized.webp');
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+}
 
 #TopBar {
 	background-image: url('/WebAsset/download_4_optimized.webp');
