--- a/Styles/style_about.css
+++ b/Styles/style_about.css
@@ -37,3 +37,27 @@
   }
 }
 
+table {
+  width: 100% !important;
+  /* max-width: 80vw; */
+  table-layout:fixed;
+  border-collapse: collapse;
+}
+
+
+table,
+th,
+td {
+  border: 1px solid rgb(80, 80, 80);
+  word-wrap:break-word;
+}
+
+th,
+td {
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #2c2c2c;
+}
