--- a/Styles/style_header.css
+++ b/Styles/style_header.css
@@ -157,11 +157,13 @@ a.highlight {
 
 @media (max-width: 576px) {
 	.body-content {
-		padding: 2rem;
+		padding: 1.3rem;
 	}
 }
 
 .body-content-text {
+	/* display: contents; */
+
 	font-size: 1.4rem;
 	font-weight: 400;
 	color: #ffffff;
